--- a/index.html
+++ b/index.html
@@ -340,6 +340,14 @@ $(document).ready(function () {
 <li>Plots a regression line and gives you a R-squared coefficient for any two advanced stats you pick.</li>
 </ul>
 </div>
+<div id="youtube-channel" class="section level2">
+<h2><a href="https://www.youtube.com/channel/UCPJIY0oU-CJRRdweKZ44UZw">YouTube Channel</a></h2>
+<ul>
+<li>My YouTube channel which has 900+ subscribers.<br />
+</li>
+<li>I teach about basic R computing.</li>
+</ul>
+</div>
 
 
 
